force-app/main/default/objects/b3o__Broad_Bean_Integration__c/b3o__Broad_Bean_Integration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Broad Bean Integration</label>
</CustomObject>