force-app/main/default/objects/b3o__Broad_Bean_Integration__c/fields/b3o__API_Client_Account__c.field-meta.xml
<CustomField>
    <fullName>b3o__API_Client_Account__c</fullName>
    <label>API: Client Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>