force-app/main/default/objects/b3o__Broad_Bean_Integration__c/fields/b3o__API_Secret_Key__c.field-meta.xml
<CustomField>
    <fullName>b3o__API_Secret_Key__c</fullName>
    <label>API: Secret Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>