force-app/main/default/objects/b3o__Broad_Bean_Integration__c/fields/b3o__API_URL__c.field-meta.xml
<CustomField>
    <fullName>b3o__API_URL__c</fullName>
    <label>API: URL</label>
    <type>Url</type>
</CustomField>