force-app/main/default/objects/b3o__Broad_Bean_Integration__c/fields/b3o__User_Email__c.field-meta.xml
<CustomField>
    <fullName>b3o__User_Email__c</fullName>
    <label>User: Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>