force-app/main/default/objects/b3o__Broad_Bean_Integration__c/fields/b3o__User_Username__c.field-meta.xml
<CustomField>
    <fullName>b3o__User_Username__c</fullName>
    <label>User: Username (Deprecated)</label>
    <type>Email</type>
</CustomField>